--- a/composer.json
+++ b/composer.json
@@ -24,11 +24,17 @@
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
+    "repositories": [
+        {
+            "type" : "vcs",
+            "url" : "git@github.com:cod43156/laminas-server.git"
+        }
+    ],
     "require": {
         "php": "~8.1.0 || ~8.2.0 || ~8.3.0 || ~8.4.0",
         "ext-dom": "*",
         "ext-soap": "*",
-        "laminas/laminas-server": "^2.15",
+        "laminas/laminas-server": "dev-php8.4_support",
         "laminas/laminas-stdlib": "^3.16",
         "laminas/laminas-uri": "^2.10"
     },
